new notebooks for each task type

--- a/data/token/conll2003.ipynb
+++ b/data/token/conll2003.ipynb
@@ -6,40 +6,44 @@
    "source": [
     "# Token Level Classification : CoNLL-2003\n",
     "\n",
-    "This is a simple notebook to download and store the CoNLL-2003 Named Entity Recognition dataset. We will take it from Huggingface datasets libray (<3) and turn it into one of the two formats that classy is able to parse (i.e. jsonl or tsv).\n"
+    "This is a simple notebook to download and store the CoNLL-2003 Named Entity Recognition dataset. We will take it from Huggingface datasets libray (<3) and turn it into one of the two formats that classy is able to parse (i.e. jsonl or tsv).\n",
+    "\n",
+    "```bash\n",
+    "classy train token data/token/conll2003 -n my_firt_conll2003_run\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: datasets in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (1.11.0)\r\n",
-      "Requirement already satisfied: dill in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (0.3.4)\r\n",
-      "Requirement already satisfied: packaging in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (21.0)\r\n",
-      "Requirement already satisfied: requests>=2.19.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (2.26.0)\r\n",
-      "Requirement already satisfied: xxhash in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (2.0.2)\r\n",
-      "Requirement already satisfied: pandas in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (1.3.2)\r\n",
-      "Requirement already satisfied: huggingface-hub<0.1.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (0.0.12)\r\n",
-      "Requirement already satisfied: fsspec>=2021.05.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (2021.8.1)\r\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (1.21.2)\r\n",
-      "Requirement already satisfied: pyarrow!=4.0.0,>=1.0.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (5.0.0)\r\n",
-      "Requirement already satisfied: tqdm>=4.42 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (4.62.2)\r\n",
-      "Requirement already satisfied: multiprocess in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (0.70.12.2)\r\n",
-      "Requirement already satisfied: typing-extensions in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from huggingface-hub<0.1.0->datasets) (3.10.0.0)\r\n",
-      "Requirement already satisfied: filelock in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from huggingface-hub<0.1.0->datasets) (3.0.12)\r\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from packaging->datasets) (2.4.7)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (2021.5.30)\r\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (3.2)\r\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (2.0.4)\r\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (1.26.6)\r\n",
-      "Requirement already satisfied: pytz>=2017.3 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from pandas->datasets) (2021.1)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from pandas->datasets) (2.8.2)\r\n",
-      "Requirement already satisfied: six>=1.5 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas->datasets) (1.16.0)\r\n"
+      "Requirement already satisfied: datasets in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (1.11.0)\n",
+      "Requirement already satisfied: packaging in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (21.0)\n",
+      "Requirement already satisfied: pandas in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (1.3.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (1.21.2)\n",
+      "Requirement already satisfied: fsspec>=2021.05.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (2021.8.1)\n",
+      "Requirement already satisfied: dill in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (0.3.4)\n",
+      "Requirement already satisfied: xxhash in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (2.0.2)\n",
+      "Requirement already satisfied: multiprocess in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (0.70.12.2)\n",
+      "Requirement already satisfied: pyarrow!=4.0.0,>=1.0.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (5.0.0)\n",
+      "Requirement already satisfied: huggingface-hub<0.1.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (0.0.12)\n",
+      "Requirement already satisfied: requests>=2.19.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (2.26.0)\n",
+      "Requirement already satisfied: tqdm>=4.42 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from datasets) (4.62.2)\n",
+      "Requirement already satisfied: typing-extensions in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from huggingface-hub<0.1.0->datasets) (3.10.0.0)\n",
+      "Requirement already satisfied: filelock in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from huggingface-hub<0.1.0->datasets) (3.0.12)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from packaging->datasets) (2.4.7)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (2021.5.30)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (3.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (1.26.6)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from pandas->datasets) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from pandas->datasets) (2021.1)\n",
+      "Requirement already satisfied: six>=1.5 in /home/edobobo/miniconda3/envs/classy/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas->datasets) (1.16.0)\n"
      ]
     }
    ],
@@ -49,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,14 +81,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "{0: 'O',\n 1: 'B-PER',\n 2: 'I-PER',\n 3: 'B-ORG',\n 4: 'I-ORG',\n 5: 'B-LOC',\n 6: 'I-LOC',\n 7: 'B-MISC',\n 8: 'I-MISC'}"
+      "text/plain": [
+       "{0: 'O',\n",
+       " 1: 'B-PER',\n",
+       " 2: 'I-PER',\n",
+       " 3: 'B-ORG',\n",
+       " 4: 'I-ORG',\n",
+       " 5: 'B-LOC',\n",
+       " 6: 'I-LOC',\n",
+       " 7: 'B-MISC',\n",
+       " 8: 'I-MISC'}"
+      ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,16 +135,16 @@
     }
    ],
    "source": [
-    "# let's create a repositiory that will contains the dataset splits\n",
+    "# let's create a repositiory that will contain the dataset splits\n",
     "import os\n",
     "dir_path = \"conll2003\"\n",
-    "os.mkdir(\"conll2003\")\n",
+    "os.mkdir(dir_path)\n",
     "! ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,41 +158,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "  0%|          | 0/14041 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9730df0b468b494f86a12acf74ee8363",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d7dc5d4516cd4d9fa76e23c4cf3ffe53"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/14041 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "text/plain": "  0%|          | 0/3250 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd05dbd92f704df18ee4f6492222117f",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3ca23b0665d54358a0a4a1d01123c350"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3250 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "text/plain": "  0%|          | 0/3453 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9b9a5eb04b448648d48d352aefd7257",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ed8fd805833e4906b3b90283fe53e175"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3453 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -205,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +246,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"tokens\": [\"CRICKET\", \"-\", \"LEICESTERSHIRE\", \"TAKE\", \"OVER\", \"AT\", \"TOP\", \"AFTER\", \"INNINGS\", \"VICTORY\", \".\"], \"labels\": [\"O\", \"O\", \"B-ORG\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\"]}\r\n",
+      "{\"tokens\": [\"LONDON\", \"1996-08-30\"], \"labels\": [\"B-LOC\", \"O\"]}\r\n",
+      "{\"tokens\": [\"West\", \"Indian\", \"all-rounder\", \"Phil\", \"Simmons\", \"took\", \"four\", \"for\", \"38\", \"on\", \"Friday\", \"as\", \"Leicestershire\", \"beat\", \"Somerset\", \"by\", \"an\", \"innings\", \"and\", \"39\", \"runs\", \"in\", \"two\", \"days\", \"to\", \"take\", \"over\", \"at\", \"the\", \"head\", \"of\", \"the\", \"county\", \"championship\", \".\"], \"labels\": [\"B-MISC\", \"I-MISC\", \"O\", \"B-PER\", \"I-PER\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"B-ORG\", \"O\", \"B-ORG\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\"]}\r\n",
+      "{\"tokens\": [\"Their\", \"stay\", \"on\", \"top\", \",\", \"though\", \",\", \"may\", \"be\", \"short-lived\", \"as\", \"title\", \"rivals\", \"Essex\", \",\", \"Derbyshire\", \"and\", \"Surrey\", \"all\", \"closed\", \"in\", \"on\", \"victory\", \"while\", \"Kent\", \"made\", \"up\", \"for\", \"lost\", \"time\", \"in\", \"their\", \"rain-affected\", \"match\", \"against\", \"Nottinghamshire\", \".\"], \"labels\": [\"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"B-ORG\", \"O\", \"B-ORG\", \"O\", \"B-ORG\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"B-ORG\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"B-ORG\", \"O\"]}\r\n",
+      "{\"tokens\": [\"After\", \"bowling\", \"Somerset\", \"out\", \"for\", \"83\", \"on\", \"the\", \"opening\", \"morning\", \"at\", \"Grace\", \"Road\", \",\", \"Leicestershire\", \"extended\", \"their\", \"first\", \"innings\", \"by\", \"94\", \"runs\", \"before\", \"being\", \"bowled\", \"out\", \"for\", \"296\", \"with\", \"England\", \"discard\", \"Andy\", \"Caddick\", \"taking\", \"three\", \"for\", \"83\", \".\"], \"labels\": [\"O\", \"O\", \"B-ORG\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"B-LOC\", \"I-LOC\", \"O\", \"B-ORG\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"O\", \"B-LOC\", \"O\", \"B-PER\", \"I-PER\", \"O\", \"O\", \"O\", \"O\", \"O\"]}\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! head -5 conll2003/validation.$output_format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
